Получение таска по айди
